chore- package install

--- a/quizclient/.eslintrc.json
+++ b/quizclient/.eslintrc.json
@@ -6,5 +6,13 @@
     "import/no-unresolved": "error",
     "import/named": "off",
     "no-console": "warn"
+  },
+  "settings": {
+    "import/resolver": {
+      "node": {
+        "extensions": [".js", ".jsx", ".ts", ".tsx"],
+        "moduleDirectory": ["src", "node_modules"]
+      }
+    }
   }
 }
