--- a/quizclient/package.json
+++ b/quizclient/package.json
@@ -38,6 +38,7 @@
     "@types/react-dom": "18.2.7",
     "@uploadthing/react": "^5.7.0",
     "autoprefixer": "10.4.15",
+    "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.0.0",
     "date-fns": "^2.30.0",
@@ -52,6 +53,7 @@
     "react-day-picker": "^8.9.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-query": "^3.39.3",
     "recharts": "^2.9.2",
     "sharp": "^0.32.5",
     "tailwind-merge": "^1.14.0",
